--- a/bin/SoundVis3Debug.app/Contents/Info.plist
+++ b/bin/SoundVis3Debug.app/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SoundVis3Debug</string>
+	<string>soundvis3Debug</string>
 	<key>CFBundleIconFile</key>
 	<string>icon-debug.icns</string>
 	<key>CFBundleIdentifier</key>
